--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <title>T-Rex Runner</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Jeux du dinosaure en JavaScript</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <canvas id="gameCanvas" width="1200" height="600"></canvas>
-    <script src="/assets/js/script.js"></script>
+  <canvas id="canvas" width="400" height="200"></canvas>
+  <script src="assets/js/game.js"></script>
 </body>
 </html>
