--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <title>Jeux de course similaire à T-Rex Run</title>
     <style>
@@ -88,7 +88,7 @@
                 let jumpHeight = 0;
                 const jumpInterval = setInterval(() => {
                     if (jumpHeight < 100) {
-                        jumpHeight += 5;
+                        jumpHeight += 8;
                         trex.style.bottom = jumpHeight + "px";
                     } else {
                         clearInterval(jumpInterval);
@@ -106,39 +106,48 @@
             }
         }
 
-        function createCactus() {
-            if (!gameIsOver) {
-                const cactus = document.createElement("div");
-                cactus.classList.add("cactus");
-                const cactusPosition = 800;
-                cactus.style.left = cactusPosition + "px";
-                gameContainer.appendChild(cactus);
+        function createCactusWithRandomIntervalAndPosition() {
+    if (!gameIsOver) {
+        const cactus = document.createElement("div");
+        cactus.classList.add("cactus");
+        const cactusPosition = 800;
+        const randomPosition = Math.floor(Math.random() * 400) + 800; // Position horizontale aléatoire entre 800 et 1200 pixels (réduite à 800 et 1200)
+        cactus.style.left = randomPosition + "px";
+        cactus.style.bottom = "0px"; // Vous pouvez définir la hauteur de manière fixe si vous le souhaitez
+        gameContainer.appendChild(cactus);
 
-                const moveCactus = setInterval(() => {
-                    const cactusLeft = parseInt(getComputedStyle(cactus).left);
-                    if (cactusLeft > -20) {
-                        cactus.style.left = (cactusLeft - 5) + "px";
-                    } else {
-                        clearInterval(moveCactus);
-                        gameContainer.removeChild(cactus);
-                    }
-
-                    const trexBottom = parseInt(getComputedStyle(trex).bottom);
-                    const trexLeft = parseInt(getComputedStyle(trex).left);
-                    const trexRight = trexLeft + 50;
-                    const cactusRight = cactusLeft + 20;
-
-                    if (
-                        trexBottom <= 40 &&
-                        trexRight >= cactusLeft &&
-                        trexLeft <= cactusRight
-                    ) {
-                        clearInterval(moveCactus);
-                        endGame();
-                    }
-                }, 20);
+        const moveCactus = setInterval(() => {
+            const cactusLeft = parseInt(getComputedStyle(cactus).left);
+            if (cactusLeft > -20) {
+                cactus.style.left = (cactusLeft - 5) + "px";
+            } else {
+                clearInterval(moveCactus);
+                gameContainer.removeChild(cactus);
             }
-        }
+
+            const trexBottom = parseInt(getComputedStyle(trex).bottom);
+            const trexLeft = parseInt(getComputedStyle(trex).left);
+            const trexRight = trexLeft + 50;
+            const cactusRight = cactusLeft + 8;
+
+            if (
+                trexBottom <= 40 &&
+                trexRight >= cactusLeft &&
+                trexLeft <= cactusRight
+            ) {
+                clearInterval(moveCactus);
+                endGame();
+            }
+        }, 20);
+
+        // Générer un délai aléatoire entre les apparitions des cactus (entre 1 et 3 secondes)
+        const randomInterval = Math.floor(Math.random() * 2000) + 1000;
+        setTimeout(createCactusWithRandomIntervalAndPosition, randomInterval);
+    }
+}
+
+// Appel initial pour commencer le jeu
+createCactusWithRandomIntervalAndPosition();
 
         function updateScore() {
             if (!gameIsOver) {
@@ -163,7 +172,6 @@
             }
         });
 
-        setInterval(createCactus, 1500);
         setInterval(updateScore, 100);
     </script>
 </body>
