--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Jeux de course similaire à T-Rex Run</title>
+    <title>FlopMan</title>
     <style>
         #game-container {
             margin: auto;
