--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flop</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -17,7 +17,9 @@
     <div id="game-over">
         <div>Game Over!</div>
         <div>Score: <span id="game-over-score">0</span></div>
-        <button onclick="restartGame()">Rejouer</button>
+        <p>Top ou flop ?</p>
+        <p>Participez au concours pour le savoir !</p>
+        <button id="rank">Let's go !</button>
     </div>
 
     <script src="assets/js/script.js">
